...
import com.kidor.vigik.extensions.toHex
import com.kidor.vigik.ui.base.ObserveViewState
import com.kidor.vigik.ui.theme.dimensions
import com.kidor.vigik.ui.usecases.FormatDateUseCase

internal const val DELETE_ICON_TEST_TAG_PREFIX = "Delete tag "
internal const val TAGS_LIST_TEST_TAG = "Tags list"
internal const val TAGS_LIST_ROW_TEST_TAG = "Tags list row"
internal const val PROGRESS_BAR_TEST_TAG = "Progress bar"
private const val TAG_ROW_TIMESTAMP_WEIGHT = 0.5f
private const val TAG_ROW_UID_WEIGHT = 0.3f
private const val TAG_ROW_ICON_WEIGHT = 0.2f

/**
 * View that display all tags saved in the database.
...
