...
        \n\n- Version: %s -</string>

    <!-- HOME -->
    <string name="home_title">Home</string>

    <!-- Animations -->
    <string name="animations_hub_title">Animations</string>
    <!-- Animation - Carousel -->
    <string name="animation_carousel_title">Carousel</string>
    <string name="carousel_mode_classic">Classic</string>
    <string name="carousel_mode_zoom">Zoom</string>
    <string name="carousel_mode_cube">3D Cube</string>
    <string name="carousel_mode_circle_reveal">Circle Reveal</string>
...
    <string name="car_login_hint_text">4 length PIN code</string>
    <string name="car_login_additional_text">Sign in with PIN code</string>
    <string name="car_login_error_message">Wrong PIN code</string>
    <string name="car_login_success_message">Congratulation!</string>

    <!-- Biometric -->
    <string name="biometric_title">Biometric</string>
    <string name="biometric_username_hint">Username</string>
    <string name="biometric_password_hint">Password</string>
    <string name="biometric_login_button_label">Login</string>
    <string name="biometric_login_with_biometric_button_label">Use biometric</string>
    <string name="biometric_login_error_label">Invalid username/password</string>
    <string name="biometric_prompt_enroll_title">Enable Biometric Login?</string>
    <string name="biometric_prompt_enroll_subtitle">Authenticate yourself to enroll your credential</string>
    <string name="biometric_prompt_login_title">Biometric login</string>
    <string name="biometric_prompt_login_subtitle">Log in using your biometric credential</string>
    <string name="biometric_prompt_negative_button_label">Cancel</string>
    <string name="biometric_home_credential_status_label">Biometric credential:</string>
    <string name="biometric_home_credential_remove_button_label">Remove</string>
    <string name="biometric_home_login_success_label">Logged successfully!</string>
    <string name="biometric_home_logout_button_label">Logout</string>

    <!-- BLE -->
    <string name="bluetooth_title">Bluetooth</string>
    <string name="bluetooth_permission_status_label">Permissions granted:</string>
    <string name="bluetooth_permission_request_button_label">Request permission</string>
    <string name="bluetooth_adapter_status_label">Bluetooth enabled:</string>
    <string name="bluetooth_location_status_label">Location enabled:</string>
    <string name="bluetooth_low_energy_scan_status_label">Low Energy scan</string>
    <string name="bluetooth_detected_devices_label">Detected devices</string>
...
    <string name="camera_retry_capture_button_label">Retry</string>

    <!-- Compass -->
    <string name="compass_title">Compass</string>

    <!-- Emoji -->
    <string name="emoji_title">Emoji</string>

    <!-- NFC -->
    <string name="nfc_title">NFC</string>
    <string name="nfc_check_title">Check NFC</string>
    <string name="nfc_refresh_button_label">Refresh</string>
    <string name="nfc_settings_button_label">Settings</string>
    <string name="nfc_hub_title">HUB</string>
    <string name="nfc_scan_button_label">NFC scan</string>
    <string name="nfc_history_button_label">Tags history</string>
    <string name="nfc_emulate_button_label">Emulate NFC tag</string>
    <string name="nfc_scan_title">Scan NFC</string>
    <string name="nfc_menu_action_stop_scan">Stop</string>
    <string name="nfc_fab_save_scan_result">Save</string>
    <string name="nfc_save_tag_success">Tag saved successfully</string>
    <string name="nfc_save_tag_fail">Fail to save tag</string>
    <string name="nfc_tag_history_title">History</string>
    <string name="nfc_history_no_data_label">No data available</string>
    <string name="nfc_emulate_title">Emulate tag</string>

    <!-- Notification -->
    <string name="notification_title">Notification</string>
    <string name="notification_default_channel_id" translatable="false">notification_default_channel</string>
    <string name="notification_default_channel_name">Default</string>
    <string name="notification_default_channel_description">Default notification channel of the app.</string>
    <string name="notification_permission_status_label">Permission granted:</string>
    <string name="notification_permission_request_button_label">Request permission</string>
    <string name="notification_generated_notification_title">Test notification</string>
...
    <string name="notification_remove_previous_notification_button_label">Remove previous</string>

    <!-- Paging -->
    <string name="paging_title">Paging</string>

    <!-- REST API -->
    <string name="rest_api_title">REST API</string>
    <string name="diablo_boss_name_ashava">Ashava, the Pestilent</string>
    <string name="diablo_boss_name_avarice">Avarice, the God Cursed</string>
    <string name="diablo_boss_name_wandering_death">Wandering Death, the Death Given Life</string>
    <string name="diablo_boss_name_unknown">Unknown boss</string>
    <string name="diablo_boss_next_spawn_label">Next possible spawn in %s</string>
    <string name="diablo_hell_tide_next_rise_label">Next Hell tide in %s</string>
...
