...
import androidx.hilt.navigation.compose.hiltViewModel
import com.kidor.vigik.R
import com.kidor.vigik.ui.base.CollectViewEvent
import com.kidor.vigik.ui.base.ObserveViewState
import com.kidor.vigik.ui.theme.dimensions

internal const val BIOMETRIC_CREDENTIALS_STATUS_ICON_TEST_TAG = "biometric_credentials_status_icon"

/**
 * View that display the section dedicated to biometric home.
 */
@Composable
fun BiometricHomeScreen(
...
