...
import com.kidor.vigik.extensions.findActivity
import com.kidor.vigik.ui.base.CollectViewEvent
import com.kidor.vigik.ui.base.ObserveViewState
import com.kidor.vigik.ui.theme.dimensions
import timber.log.Timber

internal const val USERNAME_TEXT_FIELD_TEST_TAG = "username_text_field"
internal const val PASSWORD_TEXT_FIELD_TEST_TAG = "password_text_field"

/**
 * View that display the section dedicated to biometric login.
 */
@Composable
fun BiometricLoginScreen(
...
